# mutriangle

./: .dockerignore  .gitignore  DOCKER.md  DOCKER_GPU_DEPLOY.md  Dockerfile  Dockerfile.cpu  MANIFEST.in  README.md  build-and-push.sh  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.override.yml.example  docker-run.sh  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
mutriangle/: cli.py  logging_config.py
mutriangle/config/: README.md  __init__.py  app_config.py  mcts_config.py  model_config.py  run_context.py  train_config.py  validation.py
mutriangle/config_mgmt/: README.md  __init__.py  cli_choices.py  cli_utils.py  schemas.py  storage.py
mutriangle/config_mgmt/commands/: __init__.py  _create.py  _default.py  _delete.py  _edit.py  _list.py  _show.py  _validate.py
mutriangle/features/: README.md  extractor.py  grid_features.py
mutriangle/nn/: README.md  __init__.py  model.py  network.py
mutriangle/presets/: README.md  __init__.py  definitions.py
mutriangle/rl/: README.md  __init__.py  types.py
mutriangle/rl/core/: README.md  __init__.py  buffer.py  trainer.py
mutriangle/rl/self_play/: README.md  __init__.py  mcts_helpers.py  worker.py
mutriangle/training/: README.md  __init__.py  components.py  logging_utils.py  loop.py  loop_helpers.py  runner.py  runners.py  setup.py  worker_manager.py
mutriangle/utils/: README.md  __init__.py  helpers.py  memory.py  types.py
scripts/: analyze_profiles.py
tests/: conftest.py
tests/integration/: test_full_run.py  test_mcts_integration.py  test_worker_failures.py  test_worker_logic.py
tests/nn/: test_model.py  test_network.py
tests/rl/: test_buffer.py  test_policy_loss.py  test_self_play_result.py  test_trainer.py
tests/training/: test_loop_integration.py  test_worker_manager.py
tests/utils/: __init__.py  test_memory.py
